# aw-watcher-spotify

./: .gitignore  .travis.yml  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.py  spotify_watcher.py
.github/workflows/: test.yml
aw_watcher_spotify/: __main__.py  main.py
