[tool.poetry]
name = "aw-watcher-spotify"
version = "0.2.0"
description = "Spotify watcher for ActivityWatch"
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
license = "MPL-2.0"
repository = "https://github.com/ActivityWatch/aw-watcher-spotify"

[tool.poetry.scripts]
aw-watcher-spotify = "aw_watcher_spotify:main"

[tool.poetry.dependencies]
python = "^3.6"
spotipy = "^2.12.0"
aw-client = {git = "https://github.com/ActivityWatch/aw-client.git"}

[tool.poetry.dev-dependencies]
black = "^19.10b0"
mypy = "^0.770"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
