[tool.poetry]
name = "aw-watcher-spotify"
version = "0.3.0"
description = "Spotify watcher for ActivityWatch"
authors = ["Erik Bjäreholt <erik@bjareho.lt>"]
license = "MPL-2.0"
repository = "https://github.com/ActivityWatch/aw-watcher-spotify"

[tool.poetry.scripts]
aw-watcher-spotify = "aw_watcher_spotify:main"

[tool.poetry.dependencies]
python = "^3.7"
spotipy = "^2.12.0"
aw-client = "^0.5.7"

[tool.poetry.dev-dependencies]
black = "*"
mypy = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
